--- a/CallOnlineAI/CallOnlineAI.iOS/Info.plist
+++ b/CallOnlineAI/CallOnlineAI.iOS/Info.plist
@@ -34,5 +34,13 @@
     <string>CallOnlineAI</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+    <key>NSCameraUsageDescription</key>
+    <string>This app needs camera permission to access photos.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app needs access to photos.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app needs access to microphone.</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>This app needs access to the photo gallery.</string>
 </dict>
 </plist>
