buggy on Win10 19H1 18309

--- a/UseOfflineAI/UseOfflineAI.UWP/UseOfflineAI.UWP.csproj
+++ b/UseOfflineAI/UseOfflineAI.UWP/UseOfflineAI.UWP.csproj
@@ -159,7 +159,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\my_cat_dog.onnx" />
+    <Content Include="Assets\my_cat_dog.onnx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
