--- a/UseOfflineAI/UseOfflineAI.iOS/UseOfflineAI.iOS.csproj
+++ b/UseOfflineAI/UseOfflineAI.iOS/UseOfflineAI.iOS.csproj
@@ -157,7 +157,7 @@
     <PackageReference Include="Xam.Plugin.Media">
       <Version>4.0.1.5</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1029999" />
+    <PackageReference Include="Xamarin.Forms" Version="3.5.0.129452" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
